--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Napstronaut</title>
     <script src="./lib/phaser.js"></script>
     <script src="./src/Scenes/Load.js"></script>
-    <script src="./src/Scenes/Platformer.js"></script>
+    <script src="./src/Scenes/MainMenu.js"></script>
+    <script src="./src/Scenes/LevelSelect.js"></script>
+    <script src="./src/Scenes/CrumblyCliffs.js"></script>
+    <script src="./src/Scenes/MetalMayhem.js"></script>
+    <script src="./src/Scenes/FestiveFarms.js"></script>
+    <script src="./src/Scenes/Festive_Farms2.js"></script>
     <script src="./src/Scenes/Victory.js"></script>
     <script src="./src/main.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
