Added Credits Page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="./lib/phaser.js"></script>
     <script src="./src/Scenes/Load.js"></script>
     <script src="./src/Scenes/MainMenu.js"></script>
+    <script src="./src/Scenes/CreditsScene.js"></script>
     <script src="./src/Scenes/LevelSelect.js"></script>
     <script src="./src/Scenes/CrumblyCliffs.js"></script>
     <script src="./src/Scenes/MetalMayhem.js"></script>
